--- a/index.html
+++ b/index.html
@@ -12,22 +12,23 @@
   <header>
     <h1 class="center grey-text text-darken-3">Exercise Tracker</h1>
   </header>
-  <div class="container valign-wrapper">
+
+  <div class="container valign-wrapper ">
     <div class="row">
-      <div class="col s12 m6">
+      <!-- create new user -->
+      <div class="col s12 l6">
         <div class="card white hoverable">
           <div class="card-content black-text">
             <span class="card-title center">Create new user</span>
             <div class="row">
               <form class="col s12" action="api/exercise/new-user" method="POST">
                 <div class="row">
-                  <div class="input-field col s12 l10 push-l1">
-                    <input placeholder="Username" type="text" class="validate" name="_id" required>
+                  <div class="input-field col s11 push-s1">
+                    <input placeholder="Username" type="text" class="validate" name="username" required>
                   </div>
                 </div>
-
                 <div class="row">
-                  <div class="col s12 l10 push-l1">
+                  <div class="col s11 push-s1 ">
                     <button class="btn btn-block indigo" type="submit">Submit</button>
                   </div>
                 </div>
@@ -36,35 +37,36 @@
           </div>
         </div>
       </div>
-      <div class="col s12 m6">
+      <!-- add exercise -->
+      <div class="col s12 l6 ">
         <div class="card white hoverable">
           <div class="card-content black-text">
             <span class="card-title center">Add exercise</span>
             <div class="row">
               <form class="col s12" action="api/exercise/add" method="POST">
                 <div class="row">
-                  <div class="input-field col s12 l10 push-l1">
-                    <input placeholder="User ID" type="text" class="validate" name="name" required>
+                  <div class="input-field col s11 push-s1">
+                    <input placeholder="User ID" type="text" class="validate" name="_id" required>
                   </div>
                 </div>
                 <div class="row">
-                  <div class="input-field col s12 l10 push-l1">
+                  <div class="input-field col s11 push-s1">
                     <input placeholder="Description" type="text" class="validate" name="description" required>
                   </div>
                 </div>
                 <div class="row">
-                  <div class="input-field col s12 l10 push-l1">
+                  <div class="input-field col s11 push-s1">
                     <input placeholder="Duration (minutes)" type="number" class="validate" name="duration" required
                       min="1">
                   </div>
                 </div>
                 <div class="row">
-                  <div class="input-field col s12 l10 push-l1">
+                  <div class="input-field col s11 push-s1">
                     <input type="date" class="validate" name="date">
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col s12 l10 push-l1">
+                  <div class="col s11 push-s1">
                     <button class="btn btn-block indigo" type="submit">Submit</button>
                   </div>
                 </div>
