added bold font, started to do API instructions

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
         <!-- add exercise -->
         <div class="col s12 l6">
-          <div class="card white hoverable add-exercise">
+          <div class="card white hoverable">
             <div class="card-content black-text">
               <span class="card-title center">Add exercise</span>
               <div class="row">
@@ -119,6 +119,32 @@
                     </div>
                   </div>
                 </form>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- instructions -->
+        <div class="row">
+          <div class="col s12 l8 push-l2">
+            <div class="card white hoverable">
+              <div class="card-content black-text">
+                <span class="card-title center">API info</span>
+                <ul class="collection">
+                  <li class="collection-item">
+                    <strong>Creating new user:</strong> POST { username : [your
+                    username] } to
+                    <span class="grey lighten-3">/api/exercise/new-user</span>
+                  </li>
+                  <li class="collection-item">
+                    <strong>Getting all users:</strong>
+                  </li>
+                  <li class="collection-item">
+                    <strong>Adding exercises:</strong>
+                  </li>
+                  <li class="collection-item">
+                    <strong>Retrieving exercise log:</strong>
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
