add exercise api

--- a/index.html
+++ b/index.html
@@ -131,12 +131,13 @@
                 <span class="card-title center">API info</span>
                 <ul class="collection">
                   <li class="collection-item">
-                    <strong>Creating new user:</strong> POST { username : [your
-                    username] } to
+                    <strong>Creating new user:</strong> POST JSON { username :
+                    [your username] } to
                     <span class="grey lighten-3">/api/exercise/new-user</span>
                   </li>
                   <li class="collection-item">
-                    <strong>Getting all users:</strong>
+                    <strong>Getting all users:</strong> GET to
+                    <span class="grey lighten-3">/api/exercise/users</span>
                   </li>
                   <li class="collection-item">
                     <strong>Adding exercises:</strong>
