--- a/index.html
+++ b/index.html
@@ -1,156 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Exercise Tracker</title>
-    <link rel="stylesheet" href="./dist/css/main.min.css" />
-  </head>
 
-  <body class="grey lighten-3">
-    <header>
-      <h1 class="center grey-text text-darken-3">Exercise Tracker</h1>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Exercise Tracker</title>
+  <link rel="stylesheet" href="./dist/css/main.min.css" />
+</head>
 
-    <div class="container valign-wrapper">
+<body class="grey lighten-3">
+  <header>
+    <h1 class="center grey-text text-darken-3">Exercise Tracker</h1>
+  </header>
+
+  <div class="container valign-wrapper">
+    <div class="row">
+      <!-- create new user -->
+      <div class="col s12 l6">
+        <div class="card white hoverable">
+          <div class="card-content black-text">
+            <span class="card-title center">Create new user</span>
+            <div class="row">
+              <form class="col s12" action="api/exercise/new-user" method="POST">
+                <div class="row">
+                  <div class="input-field col s11 push-s1">
+                    <input placeholder="Username" type="text" class="validate" name="username" required />
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s11 push-s1">
+                    <button class="btn btn-block indigo" type="submit">
+                      Submit
+                    </button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+        <!-- array of users -->
+        <div class="card white hoverable">
+          <div class="card-content black-text">
+            <span class="card-title center array">Get an array of users</span>
+            <div class="row">
+              <form class="col s12" action="api/exercise/users" method="GET">
+                <div class="row">
+                  <div class="col s11 push-s1">
+                    <button class="btn btn-block indigo" type="submit">
+                      GET USERS
+                    </button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- add exercise -->
+      <div class="col s12 l6">
+        <div class="card white hoverable">
+          <div class="card-content black-text">
+            <span class="card-title center">Add exercise</span>
+            <div class="row">
+              <form class="col s12" action="api/exercise/add" method="POST">
+                <div class="row">
+                  <div class="input-field col s11 push-s1">
+                    <input placeholder="User ID" type="text" class="validate" name="_id" required />
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="input-field col s11 push-s1">
+                    <input placeholder="Description" type="text" class="validate" name="description" required />
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="input-field col s11 push-s1">
+                    <input placeholder="Duration (minutes)" type="number" class="validate" name="duration" required
+                      min="1" />
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="input-field col s11 push-s1">
+                    <input type="date" class="validate" name="date" />
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s11 push-s1">
+                    <button class="btn btn-block indigo" type="submit">
+                      Submit
+                    </button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- instructions -->
       <div class="row">
-        <!-- create new user -->
-        <div class="col s12 l6">
+        <div class="col s12 l8 push-l2">
           <div class="card white hoverable">
             <div class="card-content black-text">
-              <span class="card-title center">Create new user</span>
-              <div class="row">
-                <form
-                  class="col s12"
-                  action="api/exercise/new-user"
-                  method="POST"
-                >
-                  <div class="row">
-                    <div class="input-field col s11 push-s1">
-                      <input
-                        placeholder="Username"
-                        type="text"
-                        class="validate"
-                        name="username"
-                        required
-                      />
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col s11 push-s1">
-                      <button class="btn btn-block indigo" type="submit">
-                        Submit
-                      </button>
-                    </div>
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
-          <!-- array of users -->
-          <div class="card white hoverable">
-            <div class="card-content black-text">
-              <span class="card-title center array">Get an array of users</span>
-              <div class="row">
-                <form class="col s12" action="api/exercise/users" method="GET">
-                  <div class="row">
-                    <div class="col s11 push-s1">
-                      <button class="btn btn-block indigo" type="submit">
-                        GET USERS
-                      </button>
-                    </div>
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- add exercise -->
-        <div class="col s12 l6">
-          <div class="card white hoverable">
-            <div class="card-content black-text">
-              <span class="card-title center">Add exercise</span>
-              <div class="row">
-                <form class="col s12" action="api/exercise/add" method="POST">
-                  <div class="row">
-                    <div class="input-field col s11 push-s1">
-                      <input
-                        placeholder="User ID"
-                        type="text"
-                        class="validate"
-                        name="_id"
-                        required
-                      />
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="input-field col s11 push-s1">
-                      <input
-                        placeholder="Description"
-                        type="text"
-                        class="validate"
-                        name="description"
-                        required
-                      />
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="input-field col s11 push-s1">
-                      <input
-                        placeholder="Duration (minutes)"
-                        type="number"
-                        class="validate"
-                        name="duration"
-                        required
-                        min="1"
-                      />
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="input-field col s11 push-s1">
-                      <input type="date" class="validate" name="date" />
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col s11 push-s1">
-                      <button class="btn btn-block indigo" type="submit">
-                        Submit
-                      </button>
-                    </div>
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- instructions -->
-        <div class="row">
-          <div class="col s12 l8 push-l2">
-            <div class="card white hoverable">
-              <div class="card-content black-text">
-                <span class="card-title center">API info</span>
-                <ul class="collection">
-                  <li class="collection-item">
-                    <strong>Creating new user:</strong> POST JSON { username :
-                    [your username] } to
-                    <span class="grey lighten-3">/api/exercise/new-user</span>
-                  </li>
-                  <li class="collection-item">
-                    <strong>Getting all users:</strong> GET to
-                    <span class="grey lighten-3">/api/exercise/users</span>
-                  </li>
-                  <li class="collection-item">
-                    <strong>Adding exercises:</strong>
-                  </li>
-                  <li class="collection-item">
-                    <strong>Retrieving exercise log:</strong>
-                  </li>
-                </ul>
-              </div>
+              <span class="card-title center">API info</span>
+              <ul class="collection">
+                <li class="collection-item">
+                  <strong>Creating new user:</strong> POST JSON { username :
+                  [your username] } to
+                  <span class="grey lighten-3">/api/exercise/new-user</span>
+                </li>
+                <li class="collection-item">
+                  <strong>Getting all users:</strong> GET to
+                  <span class="grey lighten-3">/api/exercise/users</span>
+                </li>
+                <li class="collection-item">
+                  <strong>Adding exercises:</strong> POST JSON { _id, description: String, duration: stringified Number,
+                  date (optional): String in a format YYYY-MM-DD } to <span
+                    class="grey lighten-3">/api/exercise/add</span>
+                </li>
+                <li class="collection-item">
+                  <strong>Retrieving exercise log:</strong>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
