added compareDate function and finished retrieve exercise log API: from and to parameters

--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@
                   date (optional): Date} to <span class="grey lighten-3">/api/exercise/add</span>
                 </li>
                 <li class="collection-item">
-                  <strong>Retrieving exercise log:</strong>
+                  <strong>Retrieving exercise log:</strong> GET to <span
+                    class="grey lighten-3">/api/exercise/log?userId=[_id]&from=[date]&to=[date]&limit=[int]</span>.
+                  "userId" is necessary, the rest is optional.
                 </li>
               </ul>
             </div>
